# aws-utils

./: .travis.yml  Cargo.toml  LICENSE-MIT  appveyor.yml  build.rs  readme.md
ci/: before_deploy.ps1  before_deploy.sh
src/: app.rs  cli.yml  main.rs
src/aws/: mod.rs
src/commands/: mod.rs
src/commands/s3/: delete.rs  mod.rs
src/commands/ssm/: mod.rs  search.rs
