[package]
name = "aws-tools"
version = "0.1.0"
authors = ["Callum <me@callumdenby.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["yaml"] }
rusoto_core = "0.40.0"
rusoto_ssm = "0.40.0"
rusoto_s3 = "0.40.0"
