[package]
name = "aws-utils"
version = "0.1.0"
authors = ["Callum Denby <me@callumdenby.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.40.0"
rusoto_ssm = "0.40.0"
rusoto_s3 = "0.40.0"

[dependencies.clap]
version = "2"
features = ["suggestions", "color"]

[build-dependencies]
clap = "2"
